PMK-29 Releasing 0.0.2.RELEASE

--- a/src/site/resources/release-notes/release-notes.html
+++ b/src/site/resources/release-notes/release-notes.html
@@ -11,80 +11,89 @@
 
 <body>
 
-	<h1>Release Notes - PROTOMAK - Version 0.0.1.RELEASE</h1>
+	<h1>Release Notes - PROTOMAK - Version 0.0.2.RELEASE - 24th June 2011</h1>
+	<h2>Story</h2>
+	<ul>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-29'>PMK-29</a>] - As
+			a user I&#39;d like Protomak to be able to generae proto files from
+			multiple input files</li>
+	</ul>
+
+
+	<h1>Release Notes - PROTOMAK - Version 0.0.1.RELEASE - 22nd June 2011</h1>
 
 	<h2>Bug</h2>
 	<ul>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-19'>PMK-19</a>] -
-			Package doesn&#39;t get written for anonymous simple types</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-23'>PMK-23</a>] -
-			Attributes are currently returned in sparse order and therefore
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-19'>PMK-19</a>]
+			- Package doesn&#39;t get written for anonymous simple types</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-23'>PMK-23</a>]
+			- Attributes are currently returned in sparse order and therefore
 			indexes are not consistent.</li>
 	</ul>
 
 	<h2>Epic</h2>
 	<ul>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-1'>PMK-1</a>] - As a
-			user I&#39;d like to have an API which converts XSDs into proto files
-		</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-24'>PMK-24</a>] -
-			Create a Protomak Maven Plugin</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-25'>PMK-25</a>] -
-			Create an Ant Task for Protomak</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-1'>PMK-1</a>] -
+			As a user I&#39;d like to have an API which converts XSDs into proto
+			files</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-24'>PMK-24</a>]
+			- Create a Protomak Maven Plugin</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-25'>PMK-25</a>]
+			- Create an Ant Task for Protomak</li>
 	</ul>
 
 	<h2>Story</h2>
 	<ul>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-4'>PMK-4</a>] - Make
-			Protomak backwards compatible with Java 5</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-4'>PMK-4</a>] -
+			Make Protomak backwards compatible with Java 5</li>
 		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-5'>PMK-5</a>] -
 			Create an XSD which reflects a Proto file structure.</li>
 		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-6'>PMK-6</a>] -
 			Create protomak-engine Website documentation</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-7'>PMK-7</a>] - Setup
-			infrastructure for XSD parser in Maven</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-8'>PMK-8</a>] - As a
-			user I&#39;d like a service which fills a Proto domain model from an
-			XSD</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-9'>PMK-9</a>] - as a
-			developer, i&#39;d like to obtain line manager and compliance
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-7'>PMK-7</a>] -
+			Setup infrastructure for XSD parser in Maven</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-8'>PMK-8</a>] -
+			As a user I&#39;d like a service which fills a Proto domain model
+			from an XSD</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-9'>PMK-9</a>] -
+			as a developer, i&#39;d like to obtain line manager and compliance
 			approval to work on this project.</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-10'>PMK-10</a>] -
-			Write a service which gets as input Protomak proto domain model (a
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-10'>PMK-10</a>]
+			- Write a service which gets as input Protomak proto domain model (a
 			ProtoType) and writes a .proto file</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-14'>PMK-14</a>] -
-			Provide a comprehensive set of XSD schemas that Protomak should
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-14'>PMK-14</a>]
+			- Provide a comprehensive set of XSD schemas that Protomak should
 			support.</li>
 	</ul>
 
 	<h2>Sub-task</h2>
 	<ul>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-11'>PMK-11</a>] -
-			Resolve use case when XSD has got a single element</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-12'>PMK-12</a>] -
-			Resolve use case when XSD has got more than a single element but it
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-11'>PMK-11</a>]
+			- Resolve use case when XSD has got a single element</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-12'>PMK-12</a>]
+			- Resolve use case when XSD has got more than a single element but it
 			hasn&#39;t got complex types</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-13'>PMK-13</a>] -
-			Resolve use case when XSD has got a single element of type complex</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-15'>PMK-15</a>] -
-			Create a method which manufactures a package name from a target
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-13'>PMK-13</a>]
+			- Resolve use case when XSD has got a single element of type complex</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-15'>PMK-15</a>]
+			- Create a method which manufactures a package name from a target
 			namespace</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-16'>PMK-16</a>] -
-			Create an utility method which, given a min and max occurs as
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-16'>PMK-16</a>]
+			- Create an utility method which, given a min and max occurs as
 			returned by XSOM it returns a MessageAttributeOptionalType with the
 			correct optionality value</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-17'>PMK-17</a>] -
-			Support simple and complex types in the same file. For SimpleTypes,
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-17'>PMK-17</a>]
+			- Support simple and complex types in the same file. For SimpleTypes,
 			support restrictions</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-18'>PMK-18</a>] -
-			Create support for anonymous types</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-21'>PMK-21</a>] -
-			Create support for extensions</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-22'>PMK-22</a>] -
-			Ensure that the order of processing multiple complex types and
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-18'>PMK-18</a>]
+			- Create support for anonymous types</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-21'>PMK-21</a>]
+			- Create support for extensions</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-22'>PMK-22</a>]
+			- Ensure that the order of processing multiple complex types and
 			elements is deterministic</li>
-		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-26'>PMK-26</a>] -
-			Ensure that generated proto files can be converted to java objects</li>
+		<li>[<a href='http://www.jemos.eu/jira/browse/PMK-26'>PMK-26</a>]
+			- Ensure that generated proto files can be converted to java objects</li>
 	</ul>
 
 </body>
